# isopy

./: .devtool.yaml  .gitignore  .gitmodules  .isopy.yaml  CHANGELOG.md  CONCEPTS.md  COOKBOOK.md  Cargo.toml  Cross.toml  DEV.md  FEATURE_REQUESTS.md  Makefile  README.md  bootstrap  bootstrap.cmd  bootstrap.ps1  cliff.toml  coverage  foo.py  isopy  isopy-bootstrap  isopy.cmd  isopy.ps1  isopy.spec  precheckin  requirements.txt  setup
isopy/: Cargo.toml  README.md
isopy-api/: Cargo.toml
isopy-api/src/: context.rs  host.rs  lib.rs  package_manager.rs  package_manager_factory.rs  package_version.rs  url.rs
isopy-go/: Cargo.toml  README.md
isopy-go/src/: constants.rs  download.rs  entrypoint.rs  error.rs  extra.rs  filter.rs  foo.rs  go_package.rs  go_package_manager.rs  go_plugin.rs  go_plugin2.rs  go_plugin_factory.rs  go_version.rs  helper.rs  lib.rs  result.rs
isopy-go/src/api/: arch.rs  file.rs  kind.rs  mod.rs  os.rs  release.rs  version.rs
isopy-go/src/serialization/: file.rs  index.rs  mod.rs  release.rs  version.rs  version_rec.rs
isopy-go/src/tng/: entrypoint.rs  go_manager.rs  go_package_manager.rs  go_plugin.rs  mod.rs
isopy-internal/: Cargo.toml
isopy-internal/src/: lib.rs
isopy-internal/src/tng/: app.rs  file.rs  mod.rs
isopy-java/: Cargo.toml  README.md
isopy-java/src/: adoptium.rs  constants.rs  entrypoint.rs  error.rs  go_package.rs  java_descriptor.rs  java_package.rs  java_package_manager.rs  java_package_manager_factory.rs  java_plugin.rs  java_plugin_factory.rs  java_version.rs  lib.rs  link_header.rs  maven_version.rs  maven_version_limit.rs  maven_version_range.rs  openjdk_descriptor.rs  openjdk_plugin_factory.rs  result.rs
isopy-java/src/adoptium/: adoptium_index_manager.rs
isopy-java/src/legacy/: constants.rs  java_descriptor.rs  java_plugin.rs  java_plugin_factory.rs  java_version.rs  mod.rs
isopy-java/src/serialization/: env_config.rs  env_config_rec.rs  mod.rs  project_config.rs  project_config_rec.rs  version.rs  version_rec.rs  versions_response.rs
isopy-java/src/tng/: entrypoint.rs  java_manager.rs  java_package_manager.rs  java_package_manager_factory.rs  java_plugin.rs  mod.rs
isopy-java2/: Cargo.toml
isopy-java2/src/: lib.rs
isopy-java2/src/tng/: java_package_manager.rs  java_package_manager_factory.rs
isopy-lib/: Cargo.toml  README.md
isopy-lib/src/: accept.rs  archive_type.rs  checksum.rs  descriptor.rs  download.rs  download_file_options.rs  download_options.rs  download_package_options.rs  env_info.rs  env_props.rs  error.rs  extent.rs  extra.rs  file_name_parts.rs  github.rs  install_package_options.rs  last_modified.rs  lib.rs  link_header.rs  macros.rs  package.rs  package_availability.rs  package_filter.rs  package_info.rs  package_manager.rs  package_manager_context.rs  package_state.rs  package_summary.rs  pagination.rs  plugin.rs  plugin_factory.rs  product.rs  progress_indicator.rs  progress_indicator_options.rs  reqwest_response.rs  response.rs  result.rs  sanitize.rs  shell.rs  source_filter.rs  (+6 more)
isopy-lib/src/tng/: accept.rs  checksum.rs  context.rs  download_options.rs  env_props.rs  file_name_parts.rs  host.rs  macros.rs  manager.rs  manager_context.rs  mod.rs  package.rs  package_info.rs  package_kind.rs  package_manager.rs  package_manager_context.rs  package_manager_factory.rs  package_summary.rs  package_version.rs  plugin.rs  sanitize.rs  tags.rs  url.rs  version.rs  version_triple.rs
isopy-lib/tests/: unpack.rs
isopy-logging/: Cargo.toml
isopy-logging/src/: global.rs  indicator.rs  logger.rs  op.rs
isopy-openjdk/: Cargo.toml
isopy-openjdk/src/: constants.rs  lib.rs  maven_version_range.rs  openjdk.rs  openjdk_descriptor.rs  openjdk_plugin.rs  openjdk_plugin_factory.rs  openjdk_version.rs
isopy-openjdk/src/adoptium/: adoptium_index_manager.rs  mod.rs
isopy-openjdk/src/serialization/: env_config_rec.rs  mod.rs  project_config_rec.rs  version_rec.rs
isopy-python/: Cargo.toml  README.md
isopy-python/src/: archive_full_version.rs  archive_group.rs  archive_info.rs  archive_metadata.rs  archive_type.rs  archive_version.rs  asset.rs  asset_filter.rs  asset_helper.rs  asset_meta.rs  availability_info.rs  base_version.rs  build_label.rs  build_tag.rs  checksum.rs  choose_best.rs  constants.rs  discriminant.rs  discriminator.rs  entrypoint.rs  error.rs  foo.rs  full_version.rs  github.rs  index.rs  index_item.rs  item.rs  label.rs  lib.rs  local.rs  local_package_info.rs  metadata.rs  package_cache.rs  platform_hacks.rs  prerelease_discriminant.rs  prerelease_info.rs  prerelease_kind.rs  prerelease_type.rs  project_version.rs  python.rs  (+21 more)
isopy-python/src/python_standalone_builds/: mod.rs
isopy-python/src/serialization/: asset.rs  asset_rec.rs  env_config.rs  env_config_rec.rs  index.rs  mod.rs  package.rs  package_rec.rs  project_config.rs  project_config_rec.rs  repositories.rs  repository.rs
isopy-python/src/tng/: archive_build_tag.rs  archive_full_version.rs  archive_group.rs  archive_info.rs  archive_metadata.rs  archive_type.rs  checksum.rs  entrypoint.rs  mod.rs  python_manager.rs  (+6 more)
isopy-python2/: Cargo.toml
isopy-python2/src/: lib.rs
isopy-repo/: Cargo.toml
isopy-repo/src/: config.rs  error.rs  link_id.rs  manifest.rs  meta_id.rs  repo.rs
isopy-util/: Cargo.toml
isopy-util/src/: lib.rs
isopy/src/: app.rs  app_context.rs  args.rs  asset.rs  backtrace.rs  bool_util.rs  cache.rs  cache_info.rs  cache_item.rs  checksum.rs  constants.rs  date_time_format.rs  descriptor_id.rs  descriptor_info.rs  dir_info_ext.rs  download.rs  env.rs  error.rs  executable.rs  file.rs  foo.rs  fs.rs  link_header.rs  main.rs  manifest.rs  moniker.rs  package_id.rs  package_manager_helper.rs  paginated_download.rs  plugin.rs  plugin_host.rs  plugin_manager.rs  print.rs  product_descriptor.rs  product_registry.rs  registry.rs  repository_info.rs  repository_name.rs  run.rs  status.rs  (+6 more)
isopy/tests/: cli.rs
joat-logger/: Cargo.toml
joat-logger/src/: global.rs  indicator.rs  state.rs  ui.rs
joat-repo/: Cargo.toml
joat-repo/src/: repo.rs  trash.rs
joatmon/: Cargo.toml
(+562 files in other folders)
