[package]
authors = ["Richard Cook"]
description = "Isolated Python Tool"
edition = "2021"
homepage = "https://rcook.github.io/isopy/"
license = "MIT"
name = "isopy"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
bytes = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
color-backtrace = "0.5.1"
colored = "2.0.0"
flate2 = "1.0.26"
futures-util = "0.3.28"
hex = "0.4.3"
home = "0.5.5"
include_dir = "0.7.3"
indicatif = "0.17.3"
joat-repo = "0.0.6"
joatmon = "0.0.27"
lazy_static = "1.4.0"
log = "0.4.17"
md5 = "0.7.0"
path-absolutize = "3.1.0"
regex = "1.8.1"
reqwest = { version = "0.11.18", features = ["stream"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
sha2 = "0.10.6"
tar = "0.4.38"
time = "0.3.21"
tinytemplate = "1.2.1"
tokio = { version = "1.28.1", features = ["full"] }

[target."cfg(any(target_os = \"linux\", target_os = \"macos\"))".dependencies]
exec = "0.3.1"

[target."cfg(target_os = \"linux\")".dependencies]
openssl-sys = { version = "0.9.87", features = ["vendored"] }

[target."cfg(target_os = \"windows\")".dependencies]
same-file = "1.0.6"
sysinfo = "0.29.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dev-dependencies]
rstest = "0.17.0"
