[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool"
edition = "2021"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-api"
readme = "README.md"
repository = "https://github.com/rcook/isopy-tng.git"
version = "0.0.0"

[dependencies]
anyhow = "1.0.86"
sanitise-file-name = "1.0.0"

[dev-dependencies]
rstest = "0.22.0"
