[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool - Go Support"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-go"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.11"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
isopy-lib = { path = "../isopy-lib" }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
rstest = "0.26.1"

[lints.clippy]
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
