[package]
authors.workspace = true
categories.workspace = true
description = "Isolated Python Tool - Go Support"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "isopy-go"
readme = "../README.md"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
isopy-lib = { path = "../isopy-lib" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
