[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool"
edition = "2021"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-internal"
readme = "README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.0.0"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
chrono = "0.4.38"
isopy-java2 = { path = "../isopy-java2" }
isopy-lib2 = { path = "../isopy-lib2" }
isopy-python2 = { path = "../isopy-python2" }
reqwest = { version = "0.12.7" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"

[dev-dependencies]
rstest = "0.22.0"
