[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool - Java Support"
edition = "2021"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-java"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.4.12"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
isopy-lib = { path = "../isopy-lib" }
log = "0.4.27"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
rstest = "0.25.0"
