[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool - Java Support"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-java"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.9"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
isopy-lib = { path = "../isopy-lib" }
log = "0.4.27"
percent-encoding = "2.3.2"
reqwest = { version = "0.12.23", features = ["stream"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
rstest = "0.25.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
