[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool - Shared Library"
edition = "2021"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-lib"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.8"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
decompress = { git = "https://github.com/rcook/decompress.git", rev = "c00c3b288e430eeffe78d3ba44952cf93697b1f0" }
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = ["deref"] }
hex = "0.4.3"
indicatif = "0.17.11"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"

[dev-dependencies]
rstest = "0.25.0"
