[package]
authors.workspace = true
categories.workspace = true
description = "Isolated Python Tool - Shared Library"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "isopy-lib"
readme = "../README.md"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
decompress = { git = "https://github.com/rcook/decompress.git", rev = "c00c3b288e430eeffe78d3ba44952cf93697b1f0" }
derive_builder = "0.20.2"
derive_more = { version = "2.1.1", features = ["deref"] }
hex = "0.4.3"
indicatif.workspace = true
log.workspace = true
reqwest.workspace = true
sha2 = "0.11.0"
strum.workspace = true
strum_macros.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
