[package]
authors.workspace = true
categories.workspace = true
description = "Isolated Python Tool - Shared Library"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "isopy-lib"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive_builder = "0.20.2"
derive_more = { version = "2.1.1", features = ["deref"] }
flate2 = "1.1.9"
hex = "0.4.3"
indicatif.workspace = true
log.workspace = true
reqwest.workspace = true
sha2 = "0.11.0"
strum.workspace = true
strum_macros.workspace = true
tar = "0.4.45"
tokio = { workspace = true, features = ["fs", "rt"] }
url.workspace = true
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
zstd = "0.13"

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
