[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool - OpenJDK Support"
edition = "2021"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-openjdk"
repository = "https://rcook.github.io/isopy"
version = "0.1.4"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
isopy-lib = { path = "../isopy-lib" }
joatmon = "0.0.29"
lazy_static = "1.4.0"
percent-encoding = "2.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.164"
serde_json = "1.0.99"
serde_yaml = "0.9.22"
thiserror = "1.0.40"
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
rstest = "0.17.0"
