[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool - Python Support"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-python"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.8"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
isopy-lib = { path = "../isopy-lib" }
itertools = "0.14.0"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
rstest = "0.25.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = { level = "deny", priority = -1 }
option_if_let_else = "allow"
pedantic = { level = "deny", priority = -1 }
redundant_pub_crate = "allow"
