[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool - Python Support"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-python"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.11"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
isopy-lib = { path = "../isopy-lib" }
itertools = "0.14.0"
log = "0.4.29"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
rstest = "0.26.1"

[lints.clippy]
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = { level = "deny", priority = -1 }
option_if_let_else = "allow"
pedantic = { level = "deny", priority = -1 }
redundant_pub_crate = "allow"
