[package]
authors.workspace = true
categories.workspace = true
description = "Isolated Python Tool - Python Support"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "isopy-python"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
isopy-lib = { path = "../isopy-lib" }
itertools = "0.14.0"
log.workspace = true
regex = "1.12.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
