[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool"
edition = "2021"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-python2"
readme = "README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.0.0"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
decompress = { git = "https://github.com/rcook/decompress.git", rev = "138bd44d10f0ced498a0e3f378c1caf54327b9bb" }
include_dir = "0.7.4"
isopy-lib = { path = "../isopy-lib" }
regex = "1.10.6"
serde_json = "1.0.127"
strum = { version = "0.26.3", features = ["strum_macros"] }
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }

[dev-dependencies]
rstest = "0.22.0"
