[package]
authors = ["Richard Cook"]
categories = ["filesystem"]
description = "Isolated Python Tool - Metadirectory Repositories"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-repo"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
fslock = "0.2.1"
isopy-util = { path = "../isopy-util" }
md5 = "0.7.0"
path-absolutize = "3.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.69"
uuid = { version = "1.18.0", features = ["v4", "serde"] }

[dev-dependencies]
rstest = "0.18.2"
tempdir = "0.3.7"

[lints.clippy]
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
