[package]
authors = ["Richard Cook"]
categories = ["encoding", "filesystem"]
description = "Isolated Python Tool - Utility Functions"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy-util"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.9"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
thiserror = "1.0.69"
toml = "0.8.23"
toml_edit = "0.22.27"

[dev-dependencies]
serial_test = "3.2.0"
rstest = "0.18.2"
tempdir = "0.3.7"

[lints.clippy]
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
