[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "isopy"
readme = "README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.13"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
clap_complete = "4.5.66"
colored = "3.1.1"
ctrlc = "3.5.2"
dirs = "6.0.0"
fslock = "0.2.1"
futures-util = "0.3.32"
indicatif = "0.18.4"
isopy-go = { path = "../isopy-go" }
isopy-java = { path = "../isopy-java" }
isopy-lib = { path = "../isopy-lib" }
isopy-python = { path = "../isopy-python" }
log = { version = "0.4.29", features = ["std"] }
md5 = "0.8.0"
open = "5.3.3"
path-absolutize = "3.1.1"
reqwest = { version = "0.13.2", features = ["query", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
strum = "0.28.0"
strum_macros = "0.28.0"
tinytemplate = "1.2.1"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[target."cfg(any(target_os = \"linux\", target_os = \"macos\"))".dependencies]
exec = "0.3.1"

[target."cfg(target_os = \"linux\")".dependencies]
openssl-sys = { version = "0.9.111", features = ["vendored"] }

[target."cfg(target_os = \"windows\")".dependencies]
same-file = "1.0.6"
sysinfo = "0.38.3"

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.4.0"
tempfile = "3.26.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
future_not_send = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = { level = "deny", priority = -1 }
option_if_let_else = "allow"
pedantic = { level = "deny", priority = -1 }
redundant_pub_crate = "allow"
