[package]
authors.workspace = true
categories.workspace = true
description = "Isolated Python Tool"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "isopy"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.3"
colored = "3.1.1"
ctrlc = "3.5.2"
dirs = "6.0.0"
fslock = "0.2.1"
futures-util = "0.3.32"
indicatif.workspace = true
isopy-go = { path = "../isopy-go" }
isopy-java = { path = "../isopy-java" }
isopy-lib = { path = "../isopy-lib" }
isopy-python = { path = "../isopy-python" }
log = { workspace = true, features = ["std"] }
md5 = "0.8.0"
open = "5.3.3"
path-absolutize = "3.1.1"
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
strum.workspace = true
strum_macros.workspace = true
tinytemplate = "1.2.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url = { workspace = true, features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[target."cfg(any(target_os = \"linux\", target_os = \"macos\"))".dependencies]
exec = "0.3.1"

[target."cfg(target_os = \"linux\")".dependencies]
openssl-sys = { version = "0.9.112", features = ["vendored"] }

[target."cfg(target_os = \"windows\")".dependencies]
same-file = "1.0.6"
sysinfo = "0.38.3"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
rstest.workspace = true
serial_test = "3.4.0"
tempfile = "3.27.0"

[lints]
workspace = true
