[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool - Logger and Progress Indicator"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["logging"]
license = "MIT"
name = "joat-logger"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.9"

[dependencies]
indicatif = "0.17.8"
lazy_static = "1.4.0"
log = { version = "0.4.21", features = ["std"] }
uuid = { version = "1.8.0", features = ["v4"] }
