[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Isolated Python Tool - Logger and Progress Indicator"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["logging"]
license = "MIT"
name = "joat-logger"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.9"

[dependencies]
indicatif = "0.17.11"
lazy_static = "1.5.0"
log = { version = "0.4.27", features = ["std"] }
uuid = { version = "1.18.0", features = ["v4"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
