[package]
authors = ["Richard Cook"]
categories = ["filesystem"]
description = "Isolated Python Tool - Metadirectory Repositories"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "joat-repo"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.9"

[features]
example-bin = ["clap", "color-backtrace", "colored", "home", "log"]

[[bin]]
name = "joat-repo-example-bin"
path = "src/bin/main.rs"
required-features = ["example-bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"], optional = true }
color-backtrace = { version = "0.6.1", optional = true }
colored = { version = "2.1.0", optional = true }
fslock = "0.2.1"
home = { version = "0.5.9", optional = true }
joatmon = { path = "../joatmon" }
log = { version = "0.4.21", optional = true }
md5 = "0.7.0"
path-absolutize = "3.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
rstest = "0.18.2"
tempdir = "0.3.7"

[lints.clippy]
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
