[package]
authors = ["Richard Cook"]
categories = ["encoding", "filesystem"]
description = "Isolated Python Tool - Utility Functions"
edition = "2024"
homepage = "https://rcook.github.io/isopy"
keywords = ["general"]
license = "MIT"
name = "joatmon"
readme = "../README.md"
repository = "https://github.com/rcook/isopy.git"
version = "0.5.9"

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
thiserror = "1.0.58"
toml = "0.8.12"
toml_edit = "0.22.9"

[dev-dependencies]
serial_test = "3.0.0"
rstest = "0.18.2"
tempdir = "0.3.7"
